feat(news): expose category endpoint and refactor news fetching/categorization